# chameleon

./: .gitignore  DESIGN.md  Makefile  README.md
.github/workflows/: ci.yml
circuits/privacy_pool/: Nargo.toml  Prover.toml
circuits/privacy_pool/src/: blacklist.nr  hash.nr  main.nr  merkle.nr
cli/: package-lock.json  package.json
cli/src/: index.ts  merkle.ts  note.ts  poseidon.ts  prover.ts  stellar.ts  test_crypto.ts
contracts/: Cargo.toml
contracts/privacy_pool/: Cargo.toml
contracts/privacy_pool/src/: errors.rs  lib.rs  merkle.rs  storage.rs  verifier.rs
contracts/privacy_pool/test_snapshots/test/: test_deposit_and_withdraw_happy_path.1.json  test_double_spend_rejected.1.json  test_duplicate_commitment_rejected.1.json  test_initialize_once.1.json  test_stale_blacklist_rejected.1.json  test_unauthorized_set_blacklist.1.json  test_unauthorized_set_vk.1.json  test_unknown_root_rejected.1.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: docs.html
frontend/src/: App.tsx  AppPage.tsx  DepositCard.tsx  NoteManager.tsx  PixelChameleon.tsx  WithdrawCard.tsx  types.ts
scripts/: demo.sh  deploy.sh  gen_vk.sh  seed_blacklist.sh
